--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- SEO 기본 메타태그 -->
   <meta name="title" content="무료슬롯 - 슬롯">
   <meta name="description" content="무료로 즐길 수 있는 온라인 슬롯 게임 Pragmatic, 인기 슬롯, 슬롯가다, 최신 게임 정보를 확인하세요.">
-  <meta name="keywords" content="무료슬롯, 슬롯체험, 가다생방송, 슬롯가다, 프라그마틱, Pragmatic, 슬롯, 슬롯가다, 카지노게임, 슬롯머신, 놀이커, 바카라, 슬롯생방송, 슬롯라이브, 안전, 놀이터, 토토, 사다리, 파워볼,">
+  <meta name="keywords" content="무료슬롯, 슬롯체험, 가다생방송, 슬롯가다, 프라그마틱, Pragmatic, 슬롯, 슬롯가다, 슬롯무료, 카지노게임, 슬롯머신, 놀이커, 바카라, 슬롯생방송, 슬롯라이브, 안전, 놀이터, 토토, 사다리, 파워볼,">
   <meta name="robots" content="index, follow">
 
   <!-- 소셜 미디어 공유용 (Open Graph) -->
