--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
   <meta property="og:title" content="무료슬롯 - 슬롯가다">
   <meta property="og:description" content="무료로 프라그마틱 슬롯 게임 인기 슬롯게임을 지금 확인하세요.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://username.github.io/">
-  <meta property="og:image" content="https://username.github.io/preview.jpg">
+  <meta property="og:url" content="https://tssuolo.github.io/slot/">
+  <meta property="og:image" content="https://i.postimg.cc/bwfrf8mf/m0823-ezgif-com-video-to-gif-converter.gif">
 
  <!-- Open Graph (Telegram / Discord / 카카오톡에서 사용) -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="무료슬롯 - 프라그마틱 슬롯 게임 모음">
   <meta property="og:description" content="무료 슬롯게임을 한 곳에서 즐기세요.">
   <meta property="og:image" content="https://i.postimg.cc/bwfrf8mf/m0823-ezgif-com-video-to-gif-converter.gif">
-  <meta property="og:url" content="https://username.github.io/">
+  <meta property="og:url" content="https://tssuolo.github.io/slot/">
 
   <!-- 동영상 미리보기 (선택사항) -->
   <meta property="og:video" content="https://username.github.io/preview.mp4">
