--- a/index.html
+++ b/index.html
@@ -10,14 +10,25 @@
   <title>무료슬롯 - 최신 온라인 슬롯 게임 모음</title>
 
   <!-- SEO 기본 메타태그 -->
-  <meta name="title" content="무료슬롯 - 슬롯">
-  <meta name="description" content="무료로 즐길 수 있는 온라인 슬롯 게임 Pragmatic, 인기 슬롯, 슬롯가다, 최신 게임 정보를 확인하세요.">
-  <meta name="keywords" content="무료슬롯, 슬롯체험, 가다생방송, 슬롯가다, 프라그마틱, Pragmatic, 슬롯, 슬롯가다, 슬롯무료, 카지노게임, 슬롯머신, 놀이커, 바카라, 슬롯생방송, 슬롯라이브, 안전, 놀이터, 토토, 사다리, 파워볼,">
+  <meta name="title" content="무료슬롯 체험 - 슬롯가다"/>
+  <meta name="publisher" content="온라인슬롯 무료체험 - 슬롯가다" />
+  <meta name="author" content="온라인 무료슬롯 체험 - 슬롯가다" />
+  <meta name="robots" content="index,follow" />
+  <meta name="description" content="무료로 즐길 수 있는 온라인 슬롯 게임 슬롯가다 입니다. Pragmatic, 인기 슬롯, 슬롯가다, 최신 게임 정보를 확인하세요.">
+  <meta name="keywords" content="무료슬롯, 슬롯체험, 가다생방송, 슬롯가다, 프라그마틱, 슬롯머신, Pragmatic, 슬롯, 슬롯 검증, 슬롯가다, 슬롯무료, 메이저, 카지노게임, 슬롯머신, 놀이커, 바카라, 슬롯생방송, 슬롯라이브, 안전, 놀이터, 토토, 사다리, 파워볼,">
   <meta name="robots" content="index, follow">
+  <meta name="twitter:card" content="summary_large_image" />
+  
+  <meta property="og:title" content="무료체험 슬롯 - 슬롯가다" />
+  <meta property="og:site_name" content="온라인슬롯 무료체험 - 슬롯가다" />
+  <meta property="og:author" content="온라인슬롯 무료체험 - 슬롯가다" />
+  <meta property="og:description" content="무료로 슬롯 게임 체험 슬롯가다 입니다. Pragmatic, 인기 슬롯, 최신 게임을 지금 확인해보세요." />
+  <meta property="og:image" content="https://i.postimg.cc/bwfrf8mf/m0823-ezgif-com-video-to-gif-converter.gif">
+  <meta property="og:url" content="https://tssuolo.github.io/slot/">
 
   <!-- 소셜 미디어 공유용 (Open Graph) -->
   <meta property="og:title" content="무료슬롯 - 슬롯가다">
-  <meta property="og:description" content="무료로 프라그마틱 슬롯 게임 인기 슬롯게임을 지금 확인하세요.">
+  <meta property="og:description" content="무료로 슬롯 게임 체험 슬롯가다 입니다. 인기 슬롯 게임을 지금 확인해보세요.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://tssuolo.github.io/slot/">
   <meta property="og:image" content="https://i.postimg.cc/bwfrf8mf/m0823-ezgif-com-video-to-gif-converter.gif">
@@ -25,7 +36,7 @@
  <!-- Open Graph (Telegram / Discord / 카카오톡에서 사용) -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="무료슬롯 - 프라그마틱 슬롯 게임 모음">
-  <meta property="og:description" content="무료 슬롯게임을 한 곳에서 즐기세요.">
+  <meta property="og:description" content="무료로 슬롯 게임 체험 슬롯가다 입니다. Pragmatic, 인기 슬롯, 최신 게임을 지금 확인해보세요.">
   <meta property="og:image" content="https://i.postimg.cc/bwfrf8mf/m0823-ezgif-com-video-to-gif-converter.gif">
   <meta property="og:url" content="https://tssuolo.github.io/slot/">
 
