--- a/live/index.html
+++ b/live/index.html
@@ -212,12 +212,14 @@
   </section>
 
   <!-- 방송 플레이어 -->
-  <div class="player-sticky">
-    <iframe 
-      src="https://player.kick.com/3333slot?muted=true&autoplay=true" 
-      allowfullscreen>
-    </iframe>
-  </div>
+<div class="player-sticky">
+  <iframe 
+    src="https://www.youtube.com/embed/live_stream?channel=NXwJnkIpILQ" 
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    allowfullscreen>
+  </iframe>
+</div>
 
   <!-- Firebase 실시간 채팅 -->
   <div id="chat-container">
