--- a/live/index.html
+++ b/live/index.html
@@ -214,7 +214,7 @@
   <!-- 방송 플레이어 -->
 <div class="player-sticky">
   <iframe 
-    src="https://www.youtube.com/embed/live_stream?channel=NXwJnkIpILQ" 
+    src="https://www.youtube.com/channel/UC38bPAs9H7l9CCvAN47aS4w/live" 
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
     allowfullscreen>
