--- a/live/index.html
+++ b/live/index.html
@@ -211,12 +211,16 @@
     </div>
   </section>
 
-  <!-- 방송 플레이어 -->
+<!-- 방송 플레이어 -->
 <div class="player-sticky">
   <iframe 
-    https://www.youtube.com/embed/live_stream?channel=UC38bPAs9H7l9CCvAN47aS4w
+    width="560" 
+    height="315" 
+    src="https://www.youtube.com/embed/live_stream?channel=UC38bPAs9H7l9CCvAN47aS4w"
+    title="YouTube live stream player" 
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin"
     allowfullscreen>
   </iframe>
 </div>
