--- a/index.html
+++ b/index.html
@@ -19,12 +19,29 @@
   <meta name="robots" content="index, follow">
   <meta name="twitter:card" content="summary_large_image" />
   
+  <!-- Open Graph -->
   <meta property="og:title" content="무료체험 슬롯 - 슬롯가다" />
   <meta property="og:site_name" content="온라인슬롯 무료체험 - 슬롯가다" />
   <meta property="og:author" content="온라인슬롯 무료체험 - 슬롯가다" />
   <meta property="og:description" content="무료로 슬롯 게임 체험 슬롯가다 입니다. Pragmatic, 인기 슬롯, 최신 게임을 지금 확인해보세요." />
   <meta property="og:image" content="https://i.postimg.cc/bwfrf8mf/m0823-ezgif-com-video-to-gif-converter.gif">
   <meta property="og:url" content="https://tssuolo.github.io/slot/">
+
+  <!-- 정규화 주소 (중복 URL 방지) -->
+  <link rel="canonical" href="https://tssuolo.github.io/slot/" />
+
+  <!-- 언어/지역 설정 -->
+  <meta name="language" content="ko" />
+  <meta name="distribution" content="global" />
+
+  <!-- 트위터 카드 확장 -->
+  <meta name="twitter:title" content="무료체험 슬롯 - 슬롯가다" />
+  <meta name="twitter:description" content="무료로 슬롯 게임 체험 슬롯가다 입니다. Pragmatic, 인기 슬롯, 최신 게임을 지금 확인해보세요." />
+  <meta name="twitter:image" content="https://i.postimg.cc/bwfrf8mf/m0823-ezgif-com-video-to-gif-converter.gif" />
+
+  <!-- 파비콘 (검색엔진 + 브라우저 탭 인식 강화) -->
+  <link rel="icon" type="image/png" href="https://tssuolo.github.io/slot/favicon.png" />
+
 
   <!-- 소셜 미디어 공유용 (Open Graph) -->
   <meta property="og:title" content="무료슬롯 - 슬롯가다">
