--- a/index.html
+++ b/index.html
@@ -4800,6 +4800,28 @@ function filterCards() {
     card.style.display = show ? "" : "none";
   });
 }
-</script>
+</script
+<section class="seo-content" style="padding:20px; line-height:1.6;">
+  <h1>무료 슬롯 체험 - 슬롯가다</h1>
+  <p>
+    슬롯가다는 최신 <strong>온라인 슬롯</strong>과 <strong>프라그마틱(Pragmatic)</strong> 인기 게임을 무료로 체험할 수 있는 공간입니다.  
+    회원가입이나 설치 없이 바로 <strong>무료 슬롯</strong>을 즐기실 수 있으며,  
+    실시간 <strong>슬롯 생방송</strong>을 통해 실제 플레이 화면과 전략도 확인할 수 있습니다.
+  </p>
+
+  <p>
+    저희는 안전하고 검증된 <strong>메이저 슬롯</strong>과 <strong>바카라</strong>, <strong>토토</strong>, <strong>파워볼</strong>, <strong>사다리</strong> 등 다양한 
+    <strong>카지노 게임</strong> 정보를 제공합니다.  
+    슬롯머신을 처음 접하는 분들도 쉽게 이해할 수 있도록 게임 설명과 규칙을 정리해 두었습니다.
+  </p>
+
+  <p>
+    온라인에서 즐길 수 있는 <strong>무료 슬롯 체험</strong> 외에도,  
+    인기 있는 <strong>슬롯 라이브 방송</strong>을 통해 언제 어디서든 최신 트렌드와 빅윈 소식을 확인하세요.  
+    <strong>슬롯가다</strong>는 단순한 게임 사이트가 아니라,  
+    슬롯 커뮤니티와 안전한 온라인 놀이터를 지향합니다.
+  </p>
+</section>
+
 </body>
 </html>
