--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="title" content="무료슬롯 체험 - 슬롯가다"/>
   <meta name="publisher" content="온라인슬롯 무료체험 - 슬롯가다" />
   <meta name="author" content="온라인 무료슬롯 체험 - 슬롯가다" />
-  <meta name="robots" content="index,follow" />
+  <meta name="robots" content="index, follow">
   <meta name="description" content="무료로 즐길 수 있는 온라인 슬롯 게임 슬롯가다 입니다. Pragmatic, 인기 슬롯, 슬롯가다, 최신 게임 정보를 확인하세요.">
   <meta name="keywords" content="무료슬롯, 슬롯체험, 가다생방송, 슬롯가다, 프라그마틱, 슬롯머신, Pragmatic, 슬롯, 슬롯 검증, 슬롯가다, 슬롯무료, 메이저, 카지노게임, 슬롯머신, 놀이커, 바카라, 슬롯생방송, 슬롯라이브, 안전, 놀이터, 토토, 사다리, 파워볼,">
   <meta name="robots" content="index, follow">
