--- a/index.html
+++ b/index.html
@@ -4820,6 +4820,14 @@ function filterCards() {
     슬롯 커뮤니티와 안전한 온라인 놀이터를 지향합니다.
   </p>
 </section>
+  <div id="footer">
+  <div id="visitor-counter" style="text-align:center; font-size:12px; color:#777; margin-top:40px; padding:10px 0;">
+    오늘 방문자수: <span id="today">-</span> | 
+    1일 평균 방문자수: <span id="avg">-</span> | 
+    총 방문자수: <span id="total">-</span>
+  </div>
+</div>
+
 
 
 </body>
